--- a/pod.yaml
+++ b/pod.yaml
@@ -7,7 +7,7 @@ metadata:
   name: pravin
 spec:
   containers:
-  - image: nginx
+  - image: ${REGISTRY_CRED_USR}/${REPO_NAME}:${BUILD_NUMBER}'
     name: pravin
     resources: {}
   dnsPolicy: ClusterFirst
